<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/look_lavel"
            android:id="@+id/textView" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sl_1"
            android:id="@+id/checkBox_sl1"
            android:checked="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sl_2"
            android:id="@+id/checkBox_sl2"
            android:checked="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sl_3"
            android:id="@+id/checkBox_sl3"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look_complete"
            android:id="@+id/textView2"
            android:paddingTop="5dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:id="@+id/checkBox_comlete"
            android:checked="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uncomplete"
            android:id="@+id/checkBox_uncomlete"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:id="@+id/textView6"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="http://pole-dance-style.ru/"
            android:id="@+id/textView5"
            android:autoLink="web"
            android:autoText="false"
            android:layout_gravity="bottom|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versionName"
            android:id="@+id/textView_ver"
            android:layout_gravity="bottom|center_horizontal" />
    </LinearLayout>

</LinearLayout>
