<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_addTrick"
        android:title="@string/addTrick"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_manage"
        />
    <item android:id="@+id/action_quit"
        android:title="@string/quit"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_revert"
        />
    <item android:id="@+id/action_sorted"
        android:title="@string/sorted"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        />
</menu>
