<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/textView4" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleText"
                    android:hint="@string/title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:id="@+id/textView3"
                android:layout_marginTop="10dp" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tagText"
                    android:hint="@string/sinonim_trick" />

            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/slSpiner"
                    android:entries="@array/sl"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Освоен"
                    android:id="@+id/complete"
                    android:checked="false" />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:clickable="true"

                android:src="@android:drawable/ic_menu_camera"
                android:layout_gravity="center_horizontal" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/contentText"
                    android:hint="@string/contrnt_trick" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
